--- a/functions/.env
+++ b/functions/.env
@@ -1,1 +1,5 @@
-SENDGRID_API_KEY = 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
+MAIL_PASSWORD = yxidqzauteugmdqv
+
+MAIL_USER = rentwave50@gmail.com
+
+SERVICE = gmail
