--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,12 @@
   "main": "index.js",
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.1"
+    "firebase-functions": "^7.0.1",
+    "nodemailer": "^7.0.11",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
