--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 .externalNativeBuild
 .cxx
 local.properties
+# Environment variables
+.env
+functions/.env
+
+# Dependencies
+node_modules/
+functions/node_modules/
+
